tests/ui/singleton-f-1.stderr
error: attempted to construct a singleton fn from function that has no inputs (must have at least a reference receiver - &self or &mut self)
  --> $DIR/singleton-f-1.rs:13:5
   |
13 |     pub async fn is_vec_empty() -> bool {
   |     ^^^

error: attempted to construct a singleton fn from function that has no inputs (must have at least a reference receiver - &self or &mut self)
  --> $DIR/singleton-f-1.rs:18:5
   |
18 |     async fn clear() {
   |     ^^^^^

error: first function argument _ (type: usize) must be a reference receiver (&self or &mut self)
  --> $DIR/singleton-f-1.rs:23:26
   |
23 |     pub async fn get_set(_: usize, _: i32) -> Option<i32> {
   |                          ^

error: first function argument _ (type: Box<[i32]>) must be a reference receiver (&self or &mut self)
  --> $DIR/singleton-f-1.rs:28:31
   |
28 |     pub async fn check_equals(_: Box<[i32]>) -> bool {
   |                               ^
